OUB-244 - on safari-fix, prevent defined bottoms from clipping.

--- a/src/prompts/components/Modal.scss
+++ b/src/prompts/components/Modal.scss
@@ -50,6 +50,7 @@
 
 	&.safari-fix {
 		position: absolute !important;
+		bottom: auto;
 		.modal-content {
 			animation: none;
 		}
